add skills and featchers

--- a/index.html
+++ b/index.html
@@ -143,8 +143,29 @@
                     <i class="bi bi-arrow-right"></i>
                 </div>
             </section>
-            <section id="skills"><h1>skills</h1></section>
-            <section id="my-work"><h1>my work</h1></section>
+            <section id="skills">
+              <div id="my-skills" class="skills-content">
+                <h2 class="section-name">my skills</h2>
+              </div>
+            </section>
+            <section id="my-work">
+              <div class="featchers-content">
+                <h2 class="section-name">featchers</h2>
+                <div class="featchers-disc center">
+                  <p class="disc">
+                    I use the latest web technology Wich make the development prose's efficient fast and secure and more than that computable with the search engine I also provide nice simple easy interface that make the user experience good and fun
+With my programming skills and your awesome idea we can build magic
+                  </p>
+                </div>
+                <div id="featchers-list" class="featchers-list">
+                  <div class="featcher">
+                    <i class="fa-regular fa-gem"></i>
+                    <h3 class="featcher-name">efficiency</h3>
+                    <i class="fa-solid fa-check-double check"></i>
+                  </div>
+                </div>
+              </div>
+            </section>
             <section id="contact"><h1>contact me</h1></section>
             <footer id="footer">@copy right</footer>
         </div>
