add featchers list

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li class="list-item"><a href="#about" class="section-link">about</a></li>
                     <li class="list-item"><a href="#services" class="section-link">services</a></li>
                     <li class="list-item"><a href="#skills" class="section-link">skills</a></li>
-                    <li class="list-item"><a href="#my-work" class="section-link">my work</a></li>
+                    <li class="list-item"><a href="#featchers" class="section-link">featchers</a></li>
                     <li class="list-item"><a href="#contact" class="section-link">contac me</a></li>
                 </ul>
                 <button class="hire-me">hire me now</button>
@@ -148,22 +148,16 @@
                 <h2 class="section-name">my skills</h2>
               </div>
             </section>
-            <section id="my-work">
+            <section id="featchers">
               <div class="featchers-content">
                 <h2 class="section-name">featchers</h2>
                 <div class="featchers-disc center">
-                  <p class="disc">
+                  <p class="disc center">
                     I use the latest web technology Wich make the development prose's efficient fast and secure and more than that computable with the search engine I also provide nice simple easy interface that make the user experience good and fun
 With my programming skills and your awesome idea we can build magic
                   </p>
                 </div>
-                <div id="featchers-list" class="featchers-list">
-                  <div class="featcher">
-                    <i class="fa-regular fa-gem"></i>
-                    <h3 class="featcher-name">efficiency</h3>
-                    <i class="fa-solid fa-check-double check"></i>
-                  </div>
-                </div>
+                <div id="featchers-list" class="featchers-list"></div>
               </div>
             </section>
             <section id="contact"><h1>contact me</h1></section>
