--- a/index.html
+++ b/index.html
@@ -160,7 +160,27 @@ With my programming skills and your awesome idea we can build magic
                 <div id="featchers-list" class="featchers-list"></div>
               </div>
             </section>
-            <section id="contact"><h1>contact me</h1></section>
+            <section id="contact">
+              <div class="contact-me">
+                <h2 class="section-name">
+                  contact me
+                </h2>
+                <div class="contact-form">
+                  <form class="form">
+                    <div class="email-input">
+                      <label for="email">
+                        your email
+                      </label>
+                      <input id="email" class="email" type="text" placeholder="example@aaa.aaa">
+                    </div>
+                    <div class="subject-input">
+                      <label for="subject">subject</label>
+                      <textarea id="subject" class="subject" placeholder="subject"></textarea>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </section>
             <footer id="footer">@copy right</footer>
         </div>
     </main>
