finish all exept hire me

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="container">
         <nav class="nav-bar">
             <div class="logo">
-                <h1>aymen berrag</h1>
+                <h1 class="logo-name">aymen berrag</h1>
             </div>
             <i id="drop-down-toggle" class="bi bi-list drop-toggle"></i>
             <div id="nav-drop-down" class="drop-down ">
@@ -40,7 +40,16 @@
                             <button class="hire-me">hire me now</button>
                         </div>
                     </div>
-                    <div class="animation">    
+                    <div class="img">
+                        <div class="three-lines"></div>
+                        <div class="three-rectangle"></div>
+                        <div class="three-circle"></div>
+                        <div class="three-circle"></div>
+                        <div class="triangle-up-down-in"></div>
+                        <div class="three-skew-lines"></div>
+                        <div class="triangle-up-down-out"></div>
+                        <div class="three-lines"></div>
+                        <div class="three-rectangle"></div>
                     </div>
                 </div>
             </section>
@@ -165,7 +174,7 @@ With my programming skills and your awesome idea we can build magic
                 <h2 class="section-name">
                   contact me
                 </h2>
-                <div class="contact-form">
+                <div class="contact-form center">
                   <form class="form">
                     <div class="email-input">
                       <label for="email">
@@ -177,11 +186,21 @@ With my programming skills and your awesome idea we can build magic
                       <label for="subject">subject</label>
                       <textarea id="subject" class="subject" placeholder="subject"></textarea>
                     </div>
+                    <button class="send" type="submit">send message</button>
                   </form>
                 </div>
               </div>
+                <footer id="footer" class="footer">
+                    <span class="copy-right">&#169;2022 aymen berrag</span>
+                    <div class="sociel center">
+                        <i class="fa-brands fa-square-facebook facebook"></i>
+                        <i class="fa-brands fa-instagram insta"></i>
+                        <i class="fa-brands fa-youtube youtube"></i>
+                        <i class="fa-brands fa-square-twitter twitter"></i>
+                        <i class="fa-brands fa-tiktok tiktok"></i>
+                    </div>
+                </footer>
             </section>
-            <footer id="footer">@copy right</footer>
         </div>
     </main>
     <script src="index.js"></script>
