--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="list-item"><a href="#featchers" class="section-link">featchers</a></li>
                     <li class="list-item"><a href="#contact" class="section-link">contac me</a></li>
                 </ul>
-                <button class="hire-me">hire me now</button>
+                <button class="hire-me" onclick="hireMe()">hire me now</button>
             </div>
         </nav>
         <div id="content" class="content">
@@ -37,7 +37,7 @@
                         <div class="slogan">
                             <h1 class="slogan-header">hi,i'm aymen</h1>
                             <p class="slogan-disc">i'm a fullstuck developer,i can helpe you to turn your awsome idea to awsome web site</p>
-                            <button class="hire-me">hire me now</button>
+                            <button class="hire-me" onclick="hireMe()">hire me now</button>
                         </div>
                     </div>
                     <div class="img">
